--- a/.github/workflow/go.yaml
+++ b/.github/workflow/go.yaml
@@ -23,4 +23,4 @@ steps:
     - uses: actions/setup-go@v2
       with:
         go-version: '^1.14.7' # The Go version to download (if necessary) and use.
-    - run: make isucari
+    - run: make isuumo
